fix: show only accepted study